<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.putoet</groupId>
  <artifactId>aoc</artifactId>
  <version>1.7.0</version>

  <name>aoc</name>
  <description>Reusable components for aoc puzzles</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>

    <junit-jupiter-engine.version>6.0.1</junit-jupiter-engine.version>
    <mockito-core.version>5.20.0</mockito-core.version>
    <jcolor.version>5.5.1</jcolor.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.diogonunes</groupId>
      <artifactId>JColor</artifactId>
      <version>${jcolor.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit-jupiter-engine.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito-core.version}</version>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-params</artifactId>
        <version>${junit-jupiter-engine.version}</version>
          <scope>test</scope>
      </dependency>
  </dependencies>
</project>
